# DEX

./: README.md  centralized_context.json  centralized_context_report.md
.github/workflows/: context-ci.yml
apps/web-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web-ui/src/: App.tsx  index.css  main.tsx
apps/web-ui/src/api/: rest-client.ts  types.ts
apps/web-ui/src/components/: DebugPanel.tsx
apps/web-ui/src/components/Orderbook/: Orderbook.tsx
apps/web-ui/src/components/Ticker/: TickerPanel.tsx
apps/web-ui/src/components/TradeTape/: TradeTape.tsx
apps/web-ui/src/pages/: MarketPage.tsx
apps/web-ui/src/state/: StoreProvider.tsx  index.ts  reducers.ts  store.ts  types.ts
apps/web-ui/src/state/__tests__/: store.test.ts
apps/web-ui/src/ws/: types.ts  ws-client.ts
chain/contracts/: Cargo.toml  vault_abi.json
chain/contracts/abi/: commitment.json  withdrawal.json
chain/contracts/src/: commitment.rs  errors.rs  events.rs  lib.rs  security.rs  vault.rs  withdrawal.rs
chain/contracts/tests/: security_hardening.rs
docs/: 01-architecture-overview.md  02-service-interaction.md  03-deployment-guide.md  04-operator-manual.md  05-upgrade-procedure.md  06-rollback-procedure.md  07-incident-response.md  08-disaster-recovery.md  09-scaling-playbook.md  10-monitoring-guide.md  11-security-checklist.md  12-audit-report-template.md  13-api-documentation.md  14-market-data-spec.md  15-governance.md  16-tokenomics.md  17-liquidity-strategy.md  18-risk-disclosure.md  19-launch-checklist.md  20-v1-documentation-freeze.md
infra/: INFRA-BASELINE-v1.0.md  docker-compose.yml
infra/ci/: ci-build.yml  ci-test.yml  release.yml
infra/config/: config-loader.sh  env.production.env  env.staging.env  env.testnet.env
infra/docker/: Dockerfile.gateway  Dockerfile.market-data  Dockerfile.matching-engine  Dockerfile.persistence  Dockerfile.risk-engine
infra/k8s/: ingress.yml  namespace.yml  network-policy.yml
infra/k8s/gateway/: deployment.yml
infra/k8s/market-data/: deployment.yml
infra/k8s/matching-engine/: deployment.yml
infra/k8s/persistence/: deployment.yml
infra/k8s/risk-engine/: deployment.yml
infra/k8s/secrets/: sealed-secrets.yml
infra/monitoring/grafana/dashboards/: dex-overview.json  matching-engine-dashboard.json
infra/monitoring/grafana/provisioning/: dashboards.yml  datasources.yml
infra/monitoring/loki/: loki-config.yml
infra/monitoring/prometheus/: alert-rules.yml  prometheus.yml
infra/monitoring/promtail/: promtail-config.yml
infra/network/: network.yml
infra/scripts/: deploy-staging.sh  deploy-testnet.sh
libs/types/: .gitignore  Cargo.toml
libs/types/src/: account.rs  errors.rs  fee.rs  ids.rs  lib.rs  numeric.rs  order.rs  position.rs  risk.rs  trade.rs
libs/wasm-core/: Cargo.toml
libs/wasm-core/src/: lib.rs  margin.rs  portfolio.rs  signing.rs  simulation.rs
openapi/: generated-openapi.yaml
services/gateway/: Cargo.toml
services/gateway/src/: auth.rs  error.rs  main.rs  models.rs  rate_limit.rs  router.rs  state.rs
services/gateway/src/handlers/: account.rs  mod.rs  order.rs  ws.rs
services/market-data/: Cargo.toml
services/market-data/src/: backpressure.rs  candles.rs  delta.rs  events.rs  ingestion.rs  lib.rs  metrics.rs  order_book.rs  replay.rs  snapshot.rs  trades.rs  websocket.rs
services/market-data/tests/: determinism.rs
services/matching-engine/: Cargo.toml
services/matching-engine/src/: engine.rs  events.rs  lib.rs
services/matching-engine/src/book/: ask_book.rs  bid_book.rs  mod.rs  price_level.rs
services/matching-engine/src/matching/: crossing.rs  executor.rs  mod.rs
services/persistence/: Cargo.toml
services/persistence/src/: determinism.rs  journal.rs  lib.rs  reader.rs  recovery.rs  snapshot.rs
services/risk-engine/: Cargo.toml
services/risk-engine/src/: engine.rs  events.rs  exposure.rs  lib.rs  liquidation.rs  margin.rs  validator.rs
services/security-audit/: Cargo.toml
services/security-audit/scripts/: pen-test.sh
services/security-audit/src/: lib.rs
services/security-audit/src/attacks/: double_spend.rs  flood.rs  invalid_signer.rs  mod.rs  nonce_collision.rs  privilege.rs  race_condition.rs  replay.rs  slow_client.rs
services/security-audit/src/pipeline/: mod.rs  scan.rs  severity_classifier.rs  vulnerability_tracker.rs
services/security-audit/src/tests/: fuzz.rs  invariant.rs  mod.rs  mutation.rs
spec/: 00-SPEC-FREEZE-v1.0.md  01-order-lifecycle.md  02-order-states.md  03-trade-lifecycle.md  04-account-state-model.md  05-margin-methodology.md  06-liquidation-process.md  07-fee-system.md  08-event-taxonomy.md  09-service-boundaries.md  10-failure-recovery-philosophy.md  11-replay-requirements.md  12-determinism-rules.md  13-timestamp-policy.md  14-sequence-numbering.md  15-settlement-cycle.md  16-custody-assumptions.md  17-governance-hooks.md  18-rate-limit-policy.md  19-security-invariants.md
tools/simulation/: Cargo.toml
tools/simulation/src/: engine.rs  export.rs  lib.rs  metrics.rs  multi_market.rs  replay.rs
tools/simulation/src/bots/: market_maker.rs  mod.rs  retail_trader.rs
tools/simulation/src/reports/: depth.rs  mod.rs  profitability.rs  slippage.rs
tools/simulation/src/scenarios/: incentive.rs  latency_injection.rs  liquidation_cascade.rs  mod.rs  order_flood.rs  volatility_spike.rs
tools/simulation/tests/: concurrency.rs  stress_100k.rs
types/: generated-types.ts
ws/: ws-protocol.md
