[package]
name = "contracts"
version = "0.1.0"
edition = "2021"
authors = ["Exchange Team"]
description = "Smart contract logic for custody and settlement"

[dependencies]
# Frozen exchange types
types = { path = "../../libs/types" }

# Deterministic decimal arithmetic
rust_decimal = { version = "1.36", features = ["serde", "serde-str"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Cryptographic hashing for state commitments
sha2 = "0.10"

# Signature verification
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# UUID identifiers
uuid = { version = "1.11", features = ["v7", "serde"] }

# Timestamp
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Property-based / fuzz testing
proptest = "1.5"
