[package]
name = "types"
version = "1.0.0"
edition = "2021"
authors = ["Exchange Team"]
description = "Core type definitions for the distributed exchange"
license = "MIT"

[dependencies]
# Deterministic decimal arithmetic (no floating-point errors)
rust_decimal = { version = "1.36", features = ["serde", "serde-str"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID v7 for time-sortable identifiers
uuid = { version = "1.11", features = ["v7", "serde"] }

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Property-based testing
proptest = "1.5"
