[package]
name = "wasm-core"
version = "1.0.0"
edition = "2021"
authors = ["Exchange Team"]
description = "Client-side deterministic computation layer for DEX"
license = "MIT"

[dependencies]
# Internal types (frozen)
types = { path = "../types" }

# Deterministic decimal arithmetic
rust_decimal = { version = "1.36", features = ["serde", "serde-str"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for identifiers
uuid = { version = "1.11", features = ["v7", "serde"] }

# Hashing (SHA-256 for signing module)
sha2 = "0.10"

# Ed25519 signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Hex encoding for signatures
hex = "0.4"

# Error handling
thiserror = "1.0"

# Random for key generation (dev/test only exposed via feature)
rand = "0.8"

[dev-dependencies]
rand = "0.8"
