[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
dashmap = "6.1.0"
headers = "0.4.1"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
types = { version = "1.0.0", path = "../../libs/types" }
uuid = { version = "1.21.0", features = ["v7"] }
