[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../../libs/types" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32c = "0.6"
sha2 = "0.10"
zstd = "0.13"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v7", "serde"] }
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
criterion = "0.5"
