[package]
name = "security-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../../libs/types" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.11", features = ["v7"] }
rand = "0.8"

[dev-dependencies]
proptest = "1.5"
