[package]
name = "simulation"
version = "1.0.0"
edition = "2021"
authors = ["Exchange Team"]
description = "Simulation & liquidity testing framework for the distributed exchange"
license = "MIT"

[dependencies]
# Frozen type definitions
types = { path = "../../libs/types" }

# Deterministic decimal arithmetic
rust_decimal = { version = "1.36", features = ["serde", "serde-str"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID v7 identifiers
uuid = { version = "1.11", features = ["v7", "serde"] }

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

# Deterministic seeded RNG
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
proptest = "1.5"
